// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`heat map zone colors broadTagsOnly (back) 1`] = `
{
  "feet": "color: #e9ecef",
  "gastrocnemius": "color: #e9ecef",
  "gluteus-maximus": "color: #e9ecef",
  "gluteus-medius": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-thigh": "color: #e9ecef",
  "later-head-triceps": "color: #e9ecef",
  "lateral-deltoid": "color: rgb(255, 135, 88)",
  "lateral-hamstrings": "color: #e9ecef",
  "lats": "color: rgb(155, 0, 0)",
  "long-head-triceps": "color: #e9ecef",
  "lower-trapezius": "color: rgb(252, 152, 104)",
  "lowerback": "color: rgb(255, 150, 100)",
  "medial-hamstrings": "color: #e9ecef",
  "medial-head-triceps": "color: #e9ecef",
  "neck": "color: rgb(252, 152, 104)",
  "posterior-deltoid": "color: #e9ecef",
  "rhomboids": "color: #e9ecef",
  "soleus": "color: #e9ecef",
  "traps-middle": "color: rgb(226, 176, 152)",
  "upper-trapezius": "color: rgb(252, 152, 104)",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors broadTagsOnly (front) 1`] = `
{
  "anterior-deltoid": "color: rgb(255, 135, 88)",
  "feet": "color: #e9ecef",
  "gastrocnemius": "color: #e9ecef",
  "groin": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-quadricep": "color: #e9ecef",
  "inner-thigh": "color: #e9ecef",
  "lateral-deltoid": "color: rgb(255, 135, 88)",
  "long-head-bicep": "color: #e9ecef",
  "lower-abdominals": "color: #e9ecef",
  "lower-pectoralis": "color: rgb(247, 157, 114)",
  "mid-pectoralis": "color: rgb(255, 96, 57)",
  "neck": "color: rgb(252, 152, 104)",
  "obliques": "color: rgb(239, 164, 128)",
  "outer-quadricep": "color: #e9ecef",
  "rectus-femoris": "color: #e9ecef",
  "serratus": "color: #e9ecef",
  "short-head-bicep": "color: #e9ecef",
  "soleus": "color: #e9ecef",
  "tibialis": "color: #e9ecef",
  "upper-abdominals": "color: #e9ecef",
  "upper-pectoralis": "color: rgb(255, 96, 57)",
  "upper-trapzeius": "color: rgb(252, 152, 104)",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors empty (back) 1`] = `
{
  "feet": "color: #e9ecef",
  "gastrocnemius": "color: #e9ecef",
  "gluteus-maximus": "color: #e9ecef",
  "gluteus-medius": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-thigh": "color: #e9ecef",
  "later-head-triceps": "color: #e9ecef",
  "lateral-deltoid": "color: #e9ecef",
  "lateral-hamstrings": "color: #e9ecef",
  "lats": "color: #e9ecef",
  "long-head-triceps": "color: #e9ecef",
  "lower-trapezius": "color: #e9ecef",
  "lowerback": "color: #e9ecef",
  "medial-hamstrings": "color: #e9ecef",
  "medial-head-triceps": "color: #e9ecef",
  "neck": "color: #e9ecef",
  "posterior-deltoid": "color: #e9ecef",
  "rhomboids": "color: #e9ecef",
  "soleus": "color: #e9ecef",
  "traps-middle": "color: #e9ecef",
  "upper-trapezius": "color: #e9ecef",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors empty (front) 1`] = `
{
  "anterior-deltoid": "color: #e9ecef",
  "feet": "color: #e9ecef",
  "gastrocnemius": "color: #e9ecef",
  "groin": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-quadricep": "color: #e9ecef",
  "inner-thigh": "color: #e9ecef",
  "lateral-deltoid": "color: #e9ecef",
  "long-head-bicep": "color: #e9ecef",
  "lower-abdominals": "color: #e9ecef",
  "lower-pectoralis": "color: #e9ecef",
  "mid-pectoralis": "color: #e9ecef",
  "neck": "color: #e9ecef",
  "obliques": "color: #e9ecef",
  "outer-quadricep": "color: #e9ecef",
  "rectus-femoris": "color: #e9ecef",
  "serratus": "color: #e9ecef",
  "short-head-bicep": "color: #e9ecef",
  "soleus": "color: #e9ecef",
  "tibialis": "color: #e9ecef",
  "upper-abdominals": "color: #e9ecef",
  "upper-pectoralis": "color: #e9ecef",
  "upper-trapzeius": "color: #e9ecef",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors everyMuscle (back) 1`] = `
{
  "feet": "color: rgb(231, 171, 142)",
  "gastrocnemius": "color: rgb(231, 171, 142)",
  "gluteus-maximus": "color: rgb(228, 173, 147)",
  "gluteus-medius": "color: rgb(228, 173, 147)",
  "hands": "color: rgb(240, 163, 126)",
  "inner-thigh": "color: rgb(222, 179, 158)",
  "later-head-triceps": "color: rgb(219, 182, 164)",
  "lateral-deltoid": "color: rgb(255, 122, 78)",
  "lateral-hamstrings": "color: rgb(225, 176, 153)",
  "lats": "color: rgb(215, 30, 12)",
  "long-head-triceps": "color: rgb(219, 182, 164)",
  "lower-trapezius": "color: rgb(255, 106, 65)",
  "lowerback": "color: rgb(221, 33, 13)",
  "medial-hamstrings": "color: rgb(225, 176, 153)",
  "medial-head-triceps": "color: rgb(219, 182, 164)",
  "neck": "color: rgb(255, 106, 65)",
  "posterior-deltoid": "color: rgb(246, 157, 115)",
  "rhomboids": "color: rgb(244, 44, 17)",
  "soleus": "color: rgb(231, 171, 142)",
  "traps-middle": "color: rgb(243, 160, 121)",
  "upper-trapezius": "color: rgb(255, 106, 65)",
  "wrist-extensors": "color: rgb(240, 163, 126)",
  "wrist-flexors": "color: rgb(240, 163, 126)",
}
`;

exports[`heat map zone colors everyMuscle (front) 1`] = `
{
  "anterior-deltoid": "color: rgb(255, 126, 81)",
  "feet": "color: rgb(231, 171, 142)",
  "gastrocnemius": "color: rgb(231, 171, 142)",
  "groin": "color: rgb(222, 179, 158)",
  "hands": "color: rgb(240, 163, 126)",
  "inner-quadricep": "color: rgb(222, 179, 158)",
  "inner-thigh": "color: rgb(222, 179, 158)",
  "lateral-deltoid": "color: rgb(255, 122, 78)",
  "long-head-bicep": "color: rgb(216, 184, 169)",
  "lower-abdominals": "color: rgb(255, 130, 84)",
  "lower-pectoralis": "color: rgb(255, 70, 36)",
  "mid-pectoralis": "color: rgb(255, 73, 39)",
  "neck": "color: rgb(255, 106, 65)",
  "obliques": "color: rgb(155, 0, 0)",
  "outer-quadricep": "color: rgb(222, 179, 158)",
  "rectus-femoris": "color: rgb(222, 179, 158)",
  "serratus": "color: rgb(212, 28, 11)",
  "short-head-bicep": "color: rgb(216, 184, 169)",
  "soleus": "color: rgb(231, 171, 142)",
  "tibialis": "color: rgb(231, 171, 142)",
  "upper-abdominals": "color: rgb(255, 130, 84)",
  "upper-pectoralis": "color: rgb(255, 81, 45)",
  "upper-trapzeius": "color: rgb(255, 106, 65)",
  "wrist-extensors": "color: rgb(240, 163, 126)",
  "wrist-flexors": "color: rgb(240, 163, 126)",
}
`;

exports[`heat map zone colors limbsAndAbs (back) 1`] = `
{
  "feet": "color: rgb(211, 189, 179)",
  "gastrocnemius": "color: rgb(211, 189, 179)",
  "gluteus-maximus": "color: #e9ecef",
  "gluteus-medius": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-thigh": "color: rgb(155, 0, 0)",
  "later-head-triceps": "color: #e9ecef",
  "lateral-deltoid": "color: #e9ecef",
  "lateral-hamstrings": "color: #e9ecef",
  "lats": "color: #e9ecef",
  "long-head-triceps": "color: #e9ecef",
  "lower-trapezius": "color: #e9ecef",
  "lowerback": "color: #e9ecef",
  "medial-hamstrings": "color: #e9ecef",
  "medial-head-triceps": "color: #e9ecef",
  "neck": "color: #e9ecef",
  "posterior-deltoid": "color: #e9ecef",
  "rhomboids": "color: #e9ecef",
  "soleus": "color: rgb(211, 189, 179)",
  "traps-middle": "color: #e9ecef",
  "upper-trapezius": "color: #e9ecef",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors limbsAndAbs (front) 1`] = `
{
  "anterior-deltoid": "color: #e9ecef",
  "feet": "color: rgb(211, 189, 179)",
  "gastrocnemius": "color: rgb(211, 189, 179)",
  "groin": "color: rgb(155, 0, 0)",
  "hands": "color: #e9ecef",
  "inner-quadricep": "color: rgb(155, 0, 0)",
  "inner-thigh": "color: rgb(155, 0, 0)",
  "lateral-deltoid": "color: #e9ecef",
  "long-head-bicep": "color: rgb(255, 131, 85)",
  "lower-abdominals": "color: rgb(238, 41, 16)",
  "lower-pectoralis": "color: #e9ecef",
  "mid-pectoralis": "color: #e9ecef",
  "neck": "color: #e9ecef",
  "obliques": "color: #e9ecef",
  "outer-quadricep": "color: rgb(155, 0, 0)",
  "rectus-femoris": "color: rgb(155, 0, 0)",
  "serratus": "color: #e9ecef",
  "short-head-bicep": "color: rgb(255, 131, 85)",
  "soleus": "color: rgb(211, 189, 179)",
  "tibialis": "color: rgb(211, 189, 179)",
  "upper-abdominals": "color: rgb(238, 41, 16)",
  "upper-pectoralis": "color: #e9ecef",
  "upper-trapzeius": "color: #e9ecef",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors specificOnly (back) 1`] = `
{
  "feet": "color: #e9ecef",
  "gastrocnemius": "color: #e9ecef",
  "gluteus-maximus": "color: #e9ecef",
  "gluteus-medius": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-thigh": "color: #e9ecef",
  "later-head-triceps": "color: #e9ecef",
  "lateral-deltoid": "color: rgb(255, 131, 85)",
  "lateral-hamstrings": "color: #e9ecef",
  "lats": "color: #e9ecef",
  "long-head-triceps": "color: #e9ecef",
  "lower-trapezius": "color: #e9ecef",
  "lowerback": "color: rgb(241, 162, 125)",
  "medial-hamstrings": "color: #e9ecef",
  "medial-head-triceps": "color: #e9ecef",
  "neck": "color: #e9ecef",
  "posterior-deltoid": "color: #e9ecef",
  "rhomboids": "color: rgb(255, 131, 85)",
  "soleus": "color: #e9ecef",
  "traps-middle": "color: #e9ecef",
  "upper-trapezius": "color: #e9ecef",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;

exports[`heat map zone colors specificOnly (front) 1`] = `
{
  "anterior-deltoid": "color: #e9ecef",
  "feet": "color: #e9ecef",
  "gastrocnemius": "color: #e9ecef",
  "groin": "color: #e9ecef",
  "hands": "color: #e9ecef",
  "inner-quadricep": "color: #e9ecef",
  "inner-thigh": "color: #e9ecef",
  "lateral-deltoid": "color: rgb(255, 131, 85)",
  "long-head-bicep": "color: #e9ecef",
  "lower-abdominals": "color: #e9ecef",
  "lower-pectoralis": "color: rgb(255, 68, 34)",
  "mid-pectoralis": "color: #e9ecef",
  "neck": "color: #e9ecef",
  "obliques": "color: #e9ecef",
  "outer-quadricep": "color: #e9ecef",
  "rectus-femoris": "color: #e9ecef",
  "serratus": "color: rgb(255, 150, 100)",
  "short-head-bicep": "color: #e9ecef",
  "soleus": "color: #e9ecef",
  "tibialis": "color: #e9ecef",
  "upper-abdominals": "color: #e9ecef",
  "upper-pectoralis": "color: rgb(155, 0, 0)",
  "upper-trapzeius": "color: #e9ecef",
  "wrist-extensors": "color: #e9ecef",
  "wrist-flexors": "color: #e9ecef",
}
`;
